tests/ui/transmutability/issue-101739-2.stderr
error[E0107]: trait takes at most 2 generic arguments but 5 generic arguments were supplied
  --> $DIR/issue-101739-2.rs:17:14
   |
LL |           Dst: BikeshedIntrinsicFrom<
   |                ^^^^^^^^^^^^^^^^^^^^^ expected at most 2 generic arguments
...
LL | /             ASSUME_LIFETIMES,
LL | |             ASSUME_VALIDITY,
LL | |             ASSUME_VISIBILITY,
   | |_____________________________- help: remove these generic arguments

error[E0308]: mismatched types
  --> $DIR/issue-101739-2.rs:19:13
   |
LL |             ASSUME_ALIGNMENT,
   |             ^^^^^^^^^^^^^^^^ expected `Assume`, found `bool`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0107, E0308.
For more information about an error, try `rustc --explain E0107`.
